--- a/templates/attendances.html
+++ b/templates/attendances.html
@@ -80,6 +80,7 @@ body {
     <tr> 
         <th>Name</th> 
         <th>attendance_summary</th> 
+<!-- name of the columns in the table -->
     </tr> 
     </thead> 
     <tbody> 
